# ZKPMTD

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
benches/: mtd_bench.rs  solana_cu_bench.rs  stark_bench.rs
docs/: ARCHITECTURE.md  GUIDE.md  TECHNICAL.md  WORKFLOW.md
examples/: basic_proof.rs  batch_proof.rs  committed_inputs.rs  cross_chain_benchmark.rs  mtd_demo.rs  solana_cu_estimate.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_epoch_parsing.rs  fuzz_lightweight_proof.rs  fuzz_merkle_path.rs  fuzz_proof_deserialize.rs  fuzz_rle_decompress.rs
src/: lib.rs
src/adapters/: mod.rs  solana.rs
src/batching/: aggregator.rs  batch_verifier.rs  merkle.rs  mod.rs
src/core/: errors.rs  mod.rs  traits.rs  types.rs
src/mtd/: entropy.rs  epoch.rs  manager.rs  mod.rs  warping.rs
src/solana/: lightweight.rs  mod.rs  onchain_verifier.rs
src/stark/: air.rs  config.rs  integrated.rs  mod.rs  prover.rs  range_air.rs  range_commit_air.rs  real_stark.rs  verifier.rs
src/utils/: compression.rs  constants.rs  hash.rs  mod.rs
tests/: adversarial_audit.rs  committed_inputs.rs  compression_integrity.rs  integration.rs  library_workflow.rs  property_tests.rs  solana_cu.rs  soundness.rs  stark_scenarios.rs  zzz_redteam_poc.rs
